--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
         "name": "next"
       }
     ],
+    "baseUrl": "src",        // ✅ Add this line
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["*"]           // ✅ Adjusted because baseUrl is now "src"
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
