--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
+    "gsap": "^3.13.0",
     "motion": "^12.12.2",
     "next": "15.3.2",
     "react": "^19.0.0",
