--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
     "react-syntax-highlighter": "^15.6.1",
-    "tailwind-merge": "^3.3.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
